--- a/index3.html
+++ b/index3.html
@@ -16,55 +16,57 @@
         <h3>Bootstrap Sidebar</h3>
     </div>
     <ul class="list-unstyled components">
-        <p>Dummy Heading</p>
+
         <!--class="active"-->
         <li>
+            <a href="#22">О программе</a>
+        </li>
+        <li>
+            <a href="#23">Установка программы</a>
+        </li>
+        <li>
+            <a href="#24">Старт программы</a>
+        </li>
+        <li>
+            <a href="#25">Вход пользователя</a>
+        </li>
+        <li>
+            <a href="#26">Открытие закрытие смены</a>
+        </li>
+        <li>
+            <a href="#27">Выбор товара, продажа, печать чека</a>
+        </li>
+        <li>
+            <a href="#28">Распряжения сообщения</a>
+        </li>
+        <li>
+            <a href="#29">Заявки</a>
+        </li>
+        <li>
+            <a href="#30">Обновление программы</a>
+        </li>
+        <li>
             
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+            <a href="#homeSubmenu2" data-toggle="collapse" aria-expanded="false">Меню продавца</a>
+            <ul class="collapse list-unstyled" id="homeSubmenu2">
+                <li><a href="#home1">Home 1</a></li>
+                <li><a href="#home2">Home 2</a></li>
+                <li><a href="#nome3">Home 3</a></li>
+            </ul>
+        </li>
+
+        <li>
+
+            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Меню администратора</a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
                 <li><a href="#home1">Home 1</a></li>
                 <li><a href="#home2">Home 2</a></li>
                 <li><a href="#nome3">Home 3</a></li>
             </ul>
         </li>
-        <li>
-            <a href="#">About</a>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
-            <ul class="collapse list-unstyled" id="pageSubmenu">
-                <li><a href="#home4">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
-            </ul>
-            <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false">Pages</a>
-            <ul class="collapse list-unstyled" id="pageSubmenu2">
-                <li><a href="#qwwww">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">Portfolio</a>
-        </li>
-        <li>
-            <a href="#">Portfolio1</a>
-        </li>
-        <li>
-            <a href="#">Portfolio2</a>
-        </li>
-        <li>
-            <a href="#">Portfolio3</a>
-        </li>
-        <li>
-            <a href="#">Portfolio4</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
-        </li>
+
     </ul>
-    <ul class="list-unstyled CTAs">
-        <li><a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a></li>
-        <li><a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a></li>
-    </ul>
+
 </div>
 <!-- Page content -->
 <div id="main" class="main">
@@ -89,7 +91,7 @@
             </div>
         </div>
     </nav>
-
+    <h2 id="22">О программе</h2>
     <P>Программа изготовлена в компании: ООО Битник.<br>
         Программа является кассовым терминалом с возможностью:<br></P>
     <ul>
@@ -103,7 +105,7 @@
         <li><P>Принимать служебные распоряжения.</P></li>
         <li><P>Отправлять различные заявки.</P></li>
     </ul>
-    <h2 id="home1">О программе</h2>
+
     <P>Программа написана на Java <a class="btn btn-link" href="https://ru.wikipedia.org/wiki/JavaFX">JavaFx</a> .<br>
         Программа может быть развернута на Windows и Unix подобных операционных системах,<br>
         разрядностью 32-64 бит.
@@ -176,15 +178,16 @@
             <li><P>128 Кристалл Сервис: Pirit K</P></li>
         </ul>
     </div>
+
+    <img src="image/head.png" class="img-responsive"/>
     <div class="line"></div>
-    </P><img src="image/head.png" class="img-responsive"/>
-    <h2 id="home2">Установка программы</h2>
+    <h2 id="23">Установка программы</h2>
     <p>На Linux (Ubuntu) программа ставится запуском скрипта – установщика с правами администратора.<br>
         Кассовый аппарат (ККM) подключается через USB порт. Пинпад подключается через USB порт, настроек в программе не
         требует, пинпад должен быть настроен сотрудниками банка.<br>
         Сканер штрих кода подключается через USB порт в режиме клавиатуры, настроек не требует<br>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> В ККM, должен быт выставлен Режим обмена – USB.
+        <strong>Внимание: </strong> В ККM, должен быт выставлен Режим обмена – USB.
     </div>
     </p>
     <p>На ОС Windovs программа ставится вручную.<br>
@@ -199,24 +202,25 @@
         Сканер штрих кода подключается через USB порт в режиме клавиатуры, настроек не требует<br>
     </p>
 
-    <div class="line"></div>
+
 
     <img data-original="image/head_action.png" height="1200" width="1920" class="img-responsive"/>
-    <h2>Старт программы</h2>
+    <div class="line"></div>
+    <h2 id="24">Старт программы</h2>
     <p>Старт программы происходит автоматически при загрузке компьютера<br>
         Так же можно осуществить старт через ярлык на рабочем столе.<br></p>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> Перед загрузкой системы или старте программы, кассовый аппарат должен быть
+        <strong>Внимание: </strong> Перед загрузкой системы или старте программы, кассовый аппарат должен быть
         подключен.<br>
-        Если этого не произошло, выполнить действие после подключения ККМ к ком-ру: КАССА -> СОСТОЯНИЕ КАССЫ.
+        Если этого не произошло, выполнить действие поздне, после подключения ККМ к ком-ру произвести: КАССА -> СОСТОЯНИЕ КАССЫ.
     </div>
 
-    <p>Во время старта программа обращается к кассовому аппарату, за данными о текущей смене.
+    <p>Во время старта, программа обращается к кассовому аппарату, за данными о текущей смене.
         Главные настройки программы отображаются в нижнем баре окна программы:<br>
         <ul>
 
             <li>
-    <P>Точка: индентификатор предприятия (тороговой точки) цифровой тип.</P></li>
+    <P>Точка: идентификатор предприятия (торговой точки) цифровой тип.</P></li>
     <li><P>Версия: Текущая версия программы.</P></li>
     <li><P>Профиль: Профиль программы, к какому серверу обращается программа (определяется в коде программы)</P></li>
     <li><P>Эквайринг: Выключен или банк оператора эквайринга.</P></li>
@@ -225,7 +229,7 @@
         ККМ.</P></li>
     <li><P>Наличность в Д.Я.: Наличность в денежном ящике ККМ, берется с ККМ, при каждом запросе программы к ККМ,в
         разрезе смены ККМ.</P></li>
-    <li><P>Б. Нал: Сумма текущик безнальных оппераций в разрезе смены ккм, считается программой на основании
+    <li><P>Б. Нал: Сумма текущий безналичных операций в разрезе смены ккм, считается программой на основании
         сохраненных данных.</P></li>
     <li><P>Смена: Номер смены в ККМ.</P></li>
     <li><P>Статус смены ККМ: Смена открыта - Смена закрыта.</P></li>
@@ -235,35 +239,46 @@
 
     <div class="line"></div>
 
-    <h2 id="home3">Вход пользователя</h2>
+    <h2 id="25">Вход пользователя</h2>
     <p>
-        Список всех доступных пользователей программа получает с сервера по запросу.<br>
-        Так же с сервера приходят все доступные продукты для продажи и их реквизиты.<br>
+        Список всех доступных пользователей, (включая администратора), программа получает с сервера по ручному запросу.<br>
+        Так же, в этом запросе, приходят все доступные продукты для продажи и их реквизиты.<br>
         При первом запуске программы, база данных пустая.<br>
-        Первый запуск должен осуществить установщик прогрммы, по специальному паролю который вшит в программный код.<br>
-        После удачного входа он должен обновить базу данных с сервера, в этих данных будеи и пароль<br>
-        системного администратора, который будет обслуживать прогрмму.<br>
-        Вход пользователя и администатора осуществляется через модальное окно: ДЕЙСТВИЯ -> ВХОД.<br>
-
-        Внимание, может случиться так, что пароль входящего продавца может отсутствовать в базе данных<br>
-        для этого набираем 911911 и входим с правами только обновления базы данных.<br>
-        После обновления: ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ делаем выход: ДЕЙСТВИЯ -> ВЫХОД<br>
-        Производим вход: ДЕЙСТВИЯ -> ВХОД и пытаемся ввести пароль полученный у администратора.<br>
-        Если ничего не получается - обращаемся к администратору.<br>
-
-        Существует маленькое удобство, пароль можно вводить через сканер штрих кода.<br></p>
+        Первый запуск должен осуществить установщик программы, по специальному паролю который вшит в программный код.<br>
+        После удачного входа, он должен обновить базу данных с сервера, в этих данных будет и пароль<br>
+        системного администратора, который будет обслуживать программу.<br>
+        Вход пользователя и администратора осуществляется через модальное окно: ДЕЙСТВИЯ -> ВХОД.</p>
 
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> При удачном входе , автоматически происходит заливка в ККМ имени продавца (печатается
+        <strong>Внимание: </strong> Mожет случиться так, что пароль входящего продавца может отсутствовать в базе данных.<br>
+        Для этого набираем 911911 и входим с правами только обновления базы данных.<br>
+        После обновления: ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ делаем выход: ДЕЙСТВИЯ -> ВЫХОД<br>
+        Производим вход: ДЕЙСТВИЯ -> ВХОД и пытаемся ввести пароль полученный у администратора.<br>
+        Если ничего не получается - обращаемся к администратору.
+    </div>
+
+
+
+        <p>Существует маленькое удобство, пароль можно вводить через сканер штрих кода.<br></p>
+
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong> При удачном входе , автоматически происходит заливка в ККМ имени продавца (печатается
         на чеке)<br>
-        если кассовый аппарат был не подключен или произошол сбой при передаче данных, ввод имени продавца осушествить
+        если кассовый аппарат был не подключен или произошел сбой при передаче данных, ввод имени продавца осуществить
         вручную: КАССА->СМЕНА КАССИРА ККМ.<br>
-        Обязательно убедиться что смена произошла удачно - вызвать окно сотояния ККМ: КАССА -> СОСТОЯНИЕ КАССЫ. Поле:
+        Обязательно убедиться, что смена пользователя в ККМ произошла удачно - вызвать окно состояния ККМ: КАССА -> СОСТОЯНИЕ КАССЫ. Поле:
         Кассир<br>
     </div>
     <p>После этого можно производить дальнейшие действия.</p>
+
+
+
     <div class="line"></div>
-    <h3 id="home4">Открытие Закрытие смены</h3>
+
+
+
+
+    <h3 id="26">Открытие Закрытие смены</h3>
     <p>В начале рабочего дня продавец обязан открыть смену в ККМ, в конце рабочего дня произвести закрытие смены (Снятие
         Z отчета).<br>
         Открытие смены включает в себя:<br></p>
@@ -303,43 +318,110 @@
 
 
     <div class="line"></div>
-    <h3 id="home5">Выбор товара, продажа, печать чека</h3>
+    <h3 id="27">Выбор товара, продажа, печать чека</h3>
     <p>Что бы произвести продажу нужно сформировать чек.<br>
     Чек формируется двумя способами:<br>
     Поиск товара через сканер:<br>
     Окно ввода кода товара должно быть активным, сканер сканирует продукт и ищет товар с таким ШК в базе, если товар<br>
-    находится, он заносится в чек, если нет то выходит окно с предупреждением что товар не найден.<br>
-    Товар заносится с количеством 1 еденица товара, если провести повторно сканером по товару, количество товара увеличится на еденицу.<br>
-    Количество можно скоректировать в ручном режиме, нажать кнопку на товаре в чеке, и ввести необходимое количество.<br>
-    Внимание Товары могут иметь одинаковые штрихкоды, в таком случае прогрмма предложит  ручной выбор из найденых товаров.<br>
+    находится, он заносится в чек, если нет, то выходит окно с предупреждением что товар не найден.<br>
+    Товар заносится с количеством 1 единица товара, если провести повторно сканером по товару, количество товара увеличится на единицу.<br>
+    Количество можно скорректировать в ручном режиме, нажать кнопку на товаре в чеке, и ввести необходимое количество.<br>
+    Внимание Товары могут иметь одинаковые штрихкоды, в таком случае программа предложит  ручной выбор из найденных товаров.<br>
     Поиск товара в ручном режиме:<br>
     Продавец в онкно поиска вводит штрих код товара или его цену.<br>
     Удаление выбранного товара производится через окно  редактирования количества товара.<br>
     Печать чека производится через две кнопки Печать за наличный расчет Печать безналичный расчет.<br>
     При печати через безналичный расчет (эквайринг) печатается два чека банка.</p>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> Поиск по названию отключен, по желанию заказчика.
+        <strong>Внимание: </strong> Поиск по названию отключен, по желанию заказчика.
     </div>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> Нулевое количество товара равно как и отрицательное не допускается.
+        <strong>Внимание: </strong> Нулевое количество товара равно как и отрицательное не допускается.
     </div>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> Обязательно дождаться конца печатию При заваисании, при печатании чека, сообщить администратору!!!
+        <strong>Внимание: </strong> Обязательно дождаться конца печати. При зависании, при печати чека, сообщить администратору!!!
     </div>
 
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> Отмена оплаты по безналу производится  клиентом с пинпада (красная кнопка).<br>
+        <strong>Внимание: </strong> Отмена оплаты по безналу производится  клиентом с пинпада (красная кнопка).<br>
         Программа не выполняет эту функцию!!!!
     </div>
 
 
     <div class="line"></div>
-    <h3 id="home6">Lorem Ipsum Dolor</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
+    <h3 id="28">Распоряжения - сообщения</h3>
+    <p>В процессе работы программа производит мониторинг сервера на предмет распоряжений  - сообщений для продавца.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong> Распоряжения - сообщения формируются в разрезе продавца.
+    </div>
+
+    <p>Распоряжения имеют статус о прочтении, этот статус можно контролировать с сервера.<br>
+    Если программа (продавец) получает распоряжение - сообщение, на главном меню загорается красная кнопка с лампочкой.<br>
+    Это символизирует, что в базе программы присутствует не прочитанное (не подтвержденное о прочтении) распоряжение - сообщение.<br>
+    Продавец ОБЯЗАН в свободное время ознакомиться с распоряжением и зафиксировать это кнопкой о прочтении.<br>
+    Ознакомление с распоряжением производить через красную кнопку.<br>
+    Так же можно посмотреть все распоряжение, включая новые, через ДЕЙСТВИЯ -> МОИ СООБЩЕНИЯ.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong> Не откладывайте действия о прочтении, это очень важно в контексте бизнеса.
+    </div>
+
+    <div class="line"></div>
+    <h3 id="29">Заявки</h3>
+    <p>В процессе работы продавца может сложиться ситуация когда нужно принять необходимы меры.<br>
+    Для этого служит форма заполнения заявки на какую-то работу (замена розетки и тд.).<br>
+    Для этого продавец должна заполнить форму: ДЕЙСТВИЯ -> СОЗДАТЬ ЗАЯВКУ,<br>
+    выбрать из выпадающего списка - кому адресована заявка.<br>
+    Заполнить форму на предмет запрашиваемой работы.<br>
+    Нажать кнопку:ОТПРАВИТЬ.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Не заполненная форма заявки (пустая) отправляться не будет.
+    </div>
+
+    <div class="line"></div>
+    <h3 id="30">Обновление программы</h3>
+    <p>Ничего не вечно, и программы должны обновляться, это связано с устранение ошибок, расширением функционала.<br>
+    Наша программа в фоновом потоке производит мониторинг сервера на предмет своего обновления, и если<br>
+    находит, что существует версия старше текущей скачивает ее на компьютер торговой точки и ждет  распоряжения пользователя об обновлении.<br>
+    Существует два варианта  показа, что программу можно обновлять.<br>
+        Вариант АДМИНИСТРАТОР:<br>
+    На главном меню загорается кнопка ОБНОВЛЕНИЕ.<br>
+    Горит постоянно не зависимо от режима открытия смены в ККМ.<br>
+    Администратор, как супер пользователь, сам решает когда обновить программу в разрезе открытой смены ККМ.<br>
+    Вариант  ПРОДАВЕЦ:<br>
+    Кнопка зажигается только если закрыта смена в ККМ.</p>
+
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Обновление программы всегда болезненный  процесс.<br>
+        Что то может пойти не так.<br>
+        И по этому обновляться рекомендуется когда смена ККМ закрыта и данные о продажах  передались на сервер.<br>
+    </div>
+    <p>Процесс обновления:<br>
+    Кнопка: МЕНЮ ОБНОВИТЬ, из диалога выбрать обновляемую версию, убедиться, что версия старше текущей (Пример: 0.0.10 старше 0.0.9).<br>
+    Кнопка диалога: ОБНОВИТЬ,  согласится с предупреждением.<br>
+        В процессе обновления программа сам закроет себя, перекопирует файлы в компьютере и через пару секунд откроется обновленная версия.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong> Обязательно убедиться, что версия обновилась (низ окна программы версия:).
+    </div>
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong>Если в результате обновления что то пошло не так ( программа не открылась после обновления).<br>
+        Звоним АДМИНИСТРАТОРУ.
+    </div>
+    <p>Откат версии назад.<br>
+    Может случиться так что версия не подошла по некоторым причинам.<br>
+    В этом случае можно сделать откат версии на предыдущую.<br>
+    Это операцию может производить только АДМИНИСТРАТОР.<br>
+        МЕНЮ АДМИНИСТРАТОР -> ИЗМЕНЕНИЕ ВЕРСИИ ПРОГРАММЫ.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Пример : Версия 0.0.2 более ранняя, чем версия 0.0.3.<br>
+        Администратор должен знать стабильную версию для отката.
+    </div>
+
+
+
+
+
+
+
 </div>
 ...
 </div>
