--- a/index3.html
+++ b/index3.html
@@ -49,9 +49,32 @@
             
             <a href="#homeSubmenu2" data-toggle="collapse" aria-expanded="false">Меню продавца</a>
             <ul class="collapse list-unstyled" id="homeSubmenu2">
-                <li><a href="#home1">Home 1</a></li>
-                <li><a href="#home2">Home 2</a></li>
-                <li><a href="#nome3">Home 3</a></li>
+                <li><a href="#41">Действия-Закрытие смены</a></li>
+                <li><a href="#42">Действия-Мои сообщения</a></li>
+                <li><a href="#43">Действия-Обновить данные</a></li>
+                <li><a href="#44">Действия-Ошибки</a></li>
+                <li><a href="#45">Действия-Отправить ошибки на сервер</a></li>
+                <li><a href="#46">Действия-Создать заявку</a></li>
+                <li><a href="#47">Действия-Вход</a></li>
+                <li><a href="#48">Действия-Выход</a></li>
+                <li><a href="#49">Действия-Выключение компьютера</a></li>
+                <li><a href="#5">История-Таблица продаж</a></li>
+                <li><a href="#5">История-Остатки</a></li>
+                <li><a href="#5">История-Моя история</a></li>
+                <li><a href="#5">История-История по точке</a></li>
+                <li><a href="#5">Касса-Смена кассира ККМ</a></li>
+                <li><a href="#5">Касса-Состояние кассы</a></li>
+                <li><a href="#5">Касса-Открытие смены</a></li>
+                <li><a href="#5">Касса-Z Отчет</a></li>
+                <li><a href="#5">Касса-X Отчет</a></li>
+                <li><a href="#5">Касса-Закрыть чек</a></li>
+                <li><a href="#5">Касса-Работа с чеками</a></li>
+                <li><a href="#5">Касса-Внесение</a></li>
+                <li><a href="#5">Касса-Выплата</a></li>
+                <li><a href="#5">Касса-Печать последнего документа</a></li>
+                <li><a href="#5">Касса-Отчет товары</a></li>
+                <li><a href="#5">Эквайринг-Проверка эквайринга</a></li>
+                <li><a href="#5">Эквайринг-Сверка итогов</a></li>
             </ul>
         </li>
 
@@ -59,9 +82,21 @@
 
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Меню администратора</a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
-                <li><a href="#home1">Home 1</a></li>
-                <li><a href="#home2">Home 2</a></li>
-                <li><a href="#nome3">Home 3</a></li>
+                <li><a href="#home1">Иоя папка</a></li>
+                <li><a href="#home2">Эквайринг</a></li>
+                <li><a href="#nome3">Шаблоны чека</a></li>
+                <li><a href="#home1">Синхронизация ККМ</a></li>
+                <li><a href="#home2">Таблица чеков</a></li>
+                <li><a href="#nome3">Профиль</a></li>
+                <li><a href="#home1">Товары пользователи</a></li>
+                <li><a href="#home2">Редактирование настроек</a></li>
+                <li><a href="#nome3">Таблица настроек кассы</a></li>
+                <li><a href="#home1">Идентификатор предприятия</a></li>
+                <li><a href="#home2">Изменение версии программы</a></li>
+                <li><a href="#nome3">Настройка кассы</a></li>
+                <li><a href="#home1">Настройка ОФД</a></li>
+                <li><a href="#home2">Отправить данные на сервер</a></li>
+
             </ul>
         </li>
 
@@ -415,6 +450,56 @@
         <strong>Внимание: </strong>Пример : Версия 0.0.2 более ранняя, чем версия 0.0.3.<br>
         Администратор должен знать стабильную версию для отката.
     </div>
+
+
+
+
+    <div class="line"></div>
+    <h3 id="41">Меню продавца: Действия -> Закрытие смены</h3>
+    <p>Производится комплексное закрытие смены</p>
+    <ul>
+        <li><P> Сверка итогов с банком (если включен Эквайринг)</P></li>
+        <li><P> Выплат денег из кассы (сумма наличности в ККМ)</P></li>
+        <li><P> Печатается Z - отчет</P></li>
+        <li><P> Продавец покидает программу</P></li>
+    </ul>
+    <p>В случае не удачи выводится окно с ошибками и рекомендациями по их устранению</p>
+
+
+
+    <div class="line"></div>
+    <h3 id="42">Меню продавца: Действия -> Мои сообщения</h3>
+    <p>Открывается старница сообщений для продавца который их открыл.<br>
+    Можно посмотреть историю сообщений и их подтвердение о прочитанности.<br>
+    Не прочитанные сообщения можно прочитать в этом окне а так же подтвердить их прочтение</p>
+
+    <div class="line"></div>
+    <h3 id="43">Меню продавца: Действия -> Обновить данные</h3>
+    <p>Ручное обновление данных, как правило делается комплексно при открытии смены или в ручную в течении тогового дня. </p>
+
+
+    <div class="line"></div>
+    <h3 id="44">Меню продавца: Действия -> Ошибки</h3>
+    <p>Открывается окно лога ошибок, как правило потребность в этом окне только у администратора при удаленном подключении.</p>
+
+
+    <div class="line"></div>
+    <h3 id="45">Меню продавца: Действия -> Отправить ошибки на сервер</h3>
+    <p>Отправляется лог ошибок и все настройки программы разработчику.<br>
+    Предлагается заполнить сопроводительное письмо с уточнением проблемы и причины отправки</p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Отправка происходит в фоновом потоке, рекомендуется 3-4 минуты не закрывать программу после этой процедуры.
+    </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
