--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
 <body>
 <div id="sidebar" data-target=".navbar" class="sidenav">
     <div class="sidebar-header">
-        <h3>Bootstrap Sidebar</h3>
+        <h3></h3>
     </div>
     <ul class="list-unstyled components">
 
@@ -55,50 +55,28 @@
                 <li><a href="#44">Действия-Ошибки</a></li>
                 <li><a href="#45">Действия-Отправить ошибки на сервер</a></li>
                 <li><a href="#46">Действия-Создать заявку</a></li>
-                <li><a href="#47">Действия-Вход</a></li>
-                <li><a href="#48">Действия-Выход</a></li>
-                <li><a href="#49">Действия-Выключение компьютера</a></li>
-                <li><a href="#5">История-Таблица продаж</a></li>
-                <li><a href="#5">История-Остатки</a></li>
-                <li><a href="#5">История-Моя история</a></li>
-                <li><a href="#5">История-История по точке</a></li>
-                <li><a href="#5">Касса-Смена кассира ККМ</a></li>
-                <li><a href="#5">Касса-Состояние кассы</a></li>
-                <li><a href="#5">Касса-Открытие смены</a></li>
-                <li><a href="#5">Касса-Z Отчет</a></li>
-                <li><a href="#5">Касса-X Отчет</a></li>
-                <li><a href="#5">Касса-Закрыть чек</a></li>
-                <li><a href="#5">Касса-Работа с чеками</a></li>
-                <li><a href="#5">Касса-Внесение</a></li>
-                <li><a href="#5">Касса-Выплата</a></li>
-                <li><a href="#5">Касса-Печать последнего документа</a></li>
-                <li><a href="#5">Касса-Отчет товары</a></li>
+
+                <li><a href="#47">История-Таблица продаж</a></li>
+                <li><a href="#48">История-Остатки</a></li>
+                <li><a href="#49">История-Моя история</a></li>
+                <li><a href="#50">История-История по точке</a></li>
+                <li><a href="#51">Касса-Смена кассира ККМ</a></li>
+                <li><a href="#52">Касса-Состояние кассы</a></li>
+                <li><a href="#53">Касса-Открытие смены</a></li>
+                <li><a href="#54">Касса-Z Отчет</a></li>
+                <li><a href="#55">Касса-X Отчет</a></li>
+                <li><a href="#56">Касса-Закрыть чек</a></li>
+                <li><a href="#57">Касса-Работа с чеками</a></li>
+                <li><a href="#58">Касса-Внесение</a></li>
+                <li><a href="#59">Касса-Выплата</a></li>
+                <li><a href="#60">Касса-Печать последнего документа</a></li>
+                <li><a href="#61">Касса-Отчет товары</a></li>
                 <li><a href="#5">Эквайринг-Проверка эквайринга</a></li>
                 <li><a href="#5">Эквайринг-Сверка итогов</a></li>
             </ul>
         </li>
 
-        <li>
 
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Меню администратора</a>
-            <ul class="collapse list-unstyled" id="homeSubmenu">
-                <li><a href="#home1">Иоя папка</a></li>
-                <li><a href="#home2">Эквайринг</a></li>
-                <li><a href="#nome3">Шаблоны чека</a></li>
-                <li><a href="#home1">Синхронизация ККМ</a></li>
-                <li><a href="#home2">Таблица чеков</a></li>
-                <li><a href="#nome3">Профиль</a></li>
-                <li><a href="#home1">Товары пользователи</a></li>
-                <li><a href="#home2">Редактирование настроек</a></li>
-                <li><a href="#nome3">Таблица настроек кассы</a></li>
-                <li><a href="#home1">Идентификатор предприятия</a></li>
-                <li><a href="#home2">Изменение версии программы</a></li>
-                <li><a href="#nome3">Настройка кассы</a></li>
-                <li><a href="#home1">Настройка ОФД</a></li>
-                <li><a href="#home2">Отправить данные на сервер</a></li>
-
-            </ul>
-        </li>
 
     </ul>
 
@@ -118,10 +96,10 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Page</a></li>
-                    <li><a href="#">Page</a></li>
-                    <li><a href="#">Page</a></li>
-                    <li><a href="#">Page</a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </div>
         </div>
@@ -131,7 +109,7 @@
         Программа является кассовым терминалом с возможностью:<br></P>
     <ul>
         <li><P>Производить настройки подключаемого кассового аппарата.</P></li>
-        <li><P>Выбирать товар для продажи через сканер шрих кода</P></li>
+        <li><P>Выбирать товар для продажи через сканер штрих кода</P></li>
         <li><P>Пробивать чеки текущей продажи За наличный расчет.</P></li>
         <li><P>Пробивать чеки текущей продажи Эквайрнг (Сбер. Банк).</P></li>
         <li><P>Осуществлять возврат товара по чеку в контексте текущей смены.</P></li>
@@ -144,7 +122,7 @@
     <P>Программа написана на Java <a class="btn btn-link" href="https://ru.wikipedia.org/wiki/JavaFX">JavaFx</a> .<br>
         Программа может быть развернута на Windows и Unix подобных операционных системах,<br>
         разрядностью 32-64 бит.
-        Программа может эксплуатироваться на компьютере с типом мониора - сенсорный экран (touchscreen)<br>
+        Программа может эксплуатироваться на компьютере с типом монитора - сенсорный экран (touchscreen)<br>
         Программа поддерживает контрольно кассовое оборудование производителя <a href="http://www.atol.ru/"
                                                                                  class="btn btn-link">АТОЛ</a> <br>
         <a href="#spoiler-1" data-toggle="collapse" class="btn btn-primary">Список моделей</a></P>
@@ -361,9 +339,9 @@
     находится, он заносится в чек, если нет, то выходит окно с предупреждением что товар не найден.<br>
     Товар заносится с количеством 1 единица товара, если провести повторно сканером по товару, количество товара увеличится на единицу.<br>
     Количество можно скорректировать в ручном режиме, нажать кнопку на товаре в чеке, и ввести необходимое количество.<br>
-    Внимание Товары могут иметь одинаковые штрихкоды, в таком случае программа предложит  ручной выбор из найденных товаров.<br>
+    Внимание Товары могут иметь одинаковые штрих коды, в таком случае программа предложит  ручной выбор из найденных товаров.<br>
     Поиск товара в ручном режиме:<br>
-    Продавец в онкно поиска вводит штрих код товара или его цену.<br>
+    Продавец в окно поиска вводит штрих код товара или его цену.<br>
     Удаление выбранного товара производится через окно  редактирования количества товара.<br>
     Печать чека производится через две кнопки Печать за наличный расчет Печать безналичный расчет.<br>
     При печати через безналичный расчет (эквайринг) печатается два чека банка.</p>
@@ -402,7 +380,7 @@
 
     <div class="line"></div>
     <h3 id="29">Заявки</h3>
-    <p>В процессе работы продавца может сложиться ситуация когда нужно принять необходимы меры.<br>
+    <p>В процессе работы продавца может сложиться ситуация когда нужно принять какие-то необходимы действия.<br>
     Для этого служит форма заполнения заявки на какую-то работу (замена розетки и тд.).<br>
     Для этого продавец должна заполнить форму: ДЕЙСТВИЯ -> СОЗДАТЬ ЗАЯВКУ,<br>
     выбрать из выпадающего списка - кому адресована заявка.<br>
@@ -414,9 +392,9 @@
 
     <div class="line"></div>
     <h3 id="30">Обновление программы</h3>
-    <p>Ничего не вечно, и программы должны обновляться, это связано с устранение ошибок, расширением функционала.<br>
-    Наша программа в фоновом потоке производит мониторинг сервера на предмет своего обновления, и если<br>
-    находит, что существует версия старше текущей скачивает ее на компьютер торговой точки и ждет  распоряжения пользователя об обновлении.<br>
+    <p>Программа развивается, это связано с устранением ошибок, расширением функционала.<br>
+    Программа в фоновом потоке производит мониторинг сервера на предмет своего обновления, и если<br>
+    находит что существует версия старше текущей, скачивает ее на компьютер торговой точки и ждет  распоряжения пользователя об обновлении.<br>
     Существует два варианта  показа, что программу можно обновлять.<br>
         Вариант АДМИНИСТРАТОР:<br>
     На главном меню загорается кнопка ОБНОВЛЕНИЕ.<br>
@@ -427,7 +405,7 @@
 
     <div class="alert alert-warning">
         <strong>Внимание: </strong>Обновление программы всегда болезненный  процесс.<br>
-        Что то может пойти не так.<br>
+        Что-то может пойти не так.<br>
         И по этому обновляться рекомендуется когда смена ККМ закрыта и данные о продажах  передались на сервер.<br>
     </div>
     <p>Процесс обновления:<br>
@@ -435,7 +413,7 @@
     Кнопка диалога: ОБНОВИТЬ,  согласится с предупреждением.<br>
         В процессе обновления программа сам закроет себя, перекопирует файлы в компьютере и через пару секунд откроется обновленная версия.</p>
     <div class="alert alert-warning">
-        <strong>Внимание: </strong> Обязательно убедиться, что версия обновилась (низ окна программы версия:).
+        <strong>Внимание: </strong> Обязательно убедиться, что версия обновилась (низ окна программы, строка версия:).
     </div>
     <div class="alert alert-warning">
         <strong>Внимание:</strong>Если в результате обновления что то пошло не так ( программа не открылась после обновления).<br>
@@ -469,8 +447,8 @@
 
     <div class="line"></div>
     <h3 id="42">Меню продавца: Действия -> Мои сообщения</h3>
-    <p>Открывается старница сообщений для продавца который их открыл.<br>
-    Можно посмотреть историю сообщений и их подтвердение о прочитанности.<br>
+    <p>Открывается страница сообщений для продавца который их открыл.<br>
+    Можно посмотреть историю сообщений и их  подтверждение  о прочтении.<br>
     Не прочитанные сообщения можно прочитать в этом окне а так же подтвердить их прочтение</p>
 
     <div class="line"></div>
@@ -491,21 +469,30 @@
         <strong>Внимание: </strong>Отправка происходит в фоновом потоке, рекомендуется 3-4 минуты не закрывать программу после этой процедуры.
     </div>
 
+    <div class="line"></div>
+    <h3 id="46">Меню продавца: Действия -> Создать заявку</h3>
+    <p>Продавец имеет возможность создать заявку на что-то.<br>
+        Формат заявки и получателя, определяет торговая администрация. Тело заявки должно быть заполнено, выбран получатель заявки
+    При наличии Интернета заявка будет доставлена</p>
 
 
+    <div class="line"></div>
+    <h3 id="47">Меню продавца: История -> Таблица продаж</h3>
+    <p>Продавец имеет возможность посмотреть продажи за текущую смену кассового аппарата<br>
+        </p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Показываются только продажи за текущую смену кассового аппарата.
+    </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
+    <div class="line"></div>
+    <h3 id="48">Меню продавца: История -> Остатки</h3>
+    <p>Страница показывает остатки товара по точке которые учитываются в 1С, Механизм расчета:<br>
+        В начале торгового дня программа получает остатки по точке в 1С с сервера, и в течении дня вычитает из них осуществлённые продажи<br>
+    </p>
+    <div class="alert alert-warning">
+        <strong>Внимание: </strong>Остатки могут показываться не верно - это не повод для беспокойства и паники.
+    </div>
 
 </div>
 ...
